Mods for Friday demo.

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,9 @@ parta-20240105T103443Z-001/
 .chainlit/
 chainlit.md
 vectorstore/
+vectorstore1/
+vectorstore2/
 __pycache__/
 models/
+parta-20240105T103443Z-002.zip
+parta-20240105T103443Z-002/
